fixed some bugs in mobile version, trying to add custom scrollbar

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -62,11 +62,12 @@
 		line-height: 1.5em
 	.reviews__item--md-item
 		max-width: 100%
-		margin-top: 20px
+		
+		padding: 20px
 		&:nth-child(1)
-			margin-top: 20px
+			margin-top: 0
 		&:nth-child(2)
-			margin-top: 20px
+			margin-top: 0
 	.overlay-content__link	
 		font-size: 15px
 	.item__text
@@ -285,6 +286,9 @@
 	.form__email
 		margin-bottom: 10px
 		width: 100%
+		border-right: 1px solid #e7e7e7
+	.reviews__item--sm-item
+		padding: 20px 10px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
